fix: clarification de la gestion du statut lors de la création d'un rendez-vous (status fixé côté backend)